# system

./: .gitignore  Tasks.txt  test.i
cmake/: CMakeLists.txt  mingw-toolchain.cmake
ref/: time.h.detailed.md
src/: main.c  system_pointer_size.c
src/include/: rnd_string.h  structures.h  system.h
src/include/rnd/: buffer.h  random.h
src/include/tests/: generate_test_files.c  gentestfile.h  rnd_string.test.h
src/include/tests/exp/: file_io.h
src/rnd/: buffer.c  string.c
src/tests/exp/: file_read.c
src/tests/rnd/: random.c  string.test.c
